BG IMG added to the project

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <!-- The navbar should be placed -->
+    <img src="https://cutewallpaper.org/24/sports-png/download-sport-transparent-hq-png-image-freepngimg.png" width="1110" height="400" class="responsive" style="width: 95%;">
     <br>
     <br>
     <div class="container-lg">
