--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,9 @@
 body {
-    background-image: url("https://res.cloudinary.com/jimshapedcoding/image/upload/v1628867094/Basketball_Sport_200179_gkllno.png");
-    background-size: 95%;
+
+    /*background-image: url("https://cutewallpaper.org/24/sports-png/download-sport-transparent-hq-png-image-freepngimg.png");
+    background-size: 95%;*/
     background-position: center;
     background-repeat: no-repeat;
-	background-color: #000022;
+	background-color: white;
 	color: white;
   }
