--- a/templates/modules/scores.html
+++ b/templates/modules/scores.html
@@ -18,7 +18,7 @@
         <td id="team_a_{{ game.id }}">{{ game.team_a }}</td>
         <td id="score_{{ game.id }}">{{ game.score }}</td>
         <td id="team_b_{{ game.id }}">{{ game.team_b }}</td>
-        <td id="minutes_{{ game.id }}">{{ game.minutes }}</td>
+        <td id="minute_{{ game.id }}">{{ game.minute }}</td>
     </tr>
     {% endfor %}
   </tbody>
